
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static double pres_ge(double *args, int n) {return args[0] >= args[1] ? 1.0 : 0.0;}
